--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,3 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"]
+    "extends": ["next/core-web-vitals", "next/typescript", "prettier"]
 }
-
-
