--- a/.prettierrc
+++ b/.prettierrc
@@ -1,1 +1,11 @@
-{}
+{
+    "arrowParens": "avoid",
+    "singleQuote": true,
+    "jsxSingleQuote": true,
+    "tabWidth": 4,
+    "trailingComma": "none",
+    "semi": false,
+    "printWidth": 80,
+    "proseWrap": "always",
+    "plugins": ["prettier-plugin-tailwindcss"]
+}
