--- a/package.json
+++ b/package.json
@@ -20,10 +20,15 @@
         "@radix-ui/react-slot": "^1.1.1",
         "@radix-ui/react-tooltip": "^1.1.7",
         "@radix-ui/react-visually-hidden": "^1.1.2",
+        "@supabase-cache-helpers/postgrest-react-query": "^1.11.5",
+        "@supabase/ssr": "^0.5.2",
+        "@supabase/supabase-js": "^2.48.1",
+        "@tanstack/react-query": "^5.66.9",
+        "@tanstack/react-query-devtools": "^5.66.9",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "lucide-react": "^0.474.0",
-        "next": "15.0.2",
+        "next": "^15.1.7",
         "next-themes": "^0.4.4",
         "prettier-plugin-tailwindcss": "^0.6.11",
         "react": "19.0.0-rc-02c0e824-20241028",
@@ -45,6 +50,7 @@
         "eslint-config-prettier": "^10.0.1",
         "postcss": "^8",
         "prettier": "^3.3.3",
+        "supabase": "^2.12.1",
         "tailwindcss": "^3.4.1",
         "typescript": "^5"
     }
