--- a/package.json
+++ b/package.json
@@ -15,18 +15,26 @@
         "@radix-ui/react-checkbox": "^1.1.3",
         "@radix-ui/react-dialog": "^1.1.6",
         "@radix-ui/react-label": "^2.1.1",
+        "@radix-ui/react-popover": "^1.1.6",
         "@radix-ui/react-select": "^2.1.5",
         "@radix-ui/react-separator": "^1.1.1",
-        "@radix-ui/react-slot": "^1.1.1",
+        "@radix-ui/react-slot": "^1.1.2",
         "@radix-ui/react-tooltip": "^1.1.7",
         "@radix-ui/react-visually-hidden": "^1.1.2",
+        "@supabase-cache-helpers/postgrest-react-query": "^1.11.5",
+        "@supabase/ssr": "^0.5.2",
+        "@supabase/supabase-js": "^2.48.1",
+        "@tanstack/react-query": "^5.66.9",
+        "@tanstack/react-query-devtools": "^5.66.9",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "date-fns": "^3.6.0",
         "lucide-react": "^0.474.0",
-        "next": "15.0.2",
+        "next": "^15.1.7",
         "next-themes": "^0.4.4",
         "prettier-plugin-tailwindcss": "^0.6.11",
         "react": "19.0.0-rc-02c0e824-20241028",
+        "react-day-picker": "^8.10.1",
         "react-dom": "19.0.0-rc-02c0e824-20241028",
         "react-dropzone": "^14.3.5",
         "react-hook-form": "^7.54.2",
@@ -45,6 +53,7 @@
         "eslint-config-prettier": "^10.0.1",
         "postcss": "^8",
         "prettier": "^3.3.3",
+        "supabase": "^2.12.1",
         "tailwindcss": "^3.4.1",
         "typescript": "^5"
     }
